<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailsToolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/userScreenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MojoGithubUser"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <ImageButton
                android:id="@+id/imageBackIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_left"
                android:background="@null"
                />


        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/no_internet_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/red"
            android:fontFamily="@font/poppins_reg"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/no_internet_connection"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/detailsToolbar" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_internet_message" />

        <LinearLayout
            android:id="@+id/followingDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/user_image">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/followers" />

                <TextView
                    android:id="@+id/followersNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/following" />

                <TextView
                    android:id="@+id/followeingNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/followingDetails">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="15sp"
                        android:text="@string/job_title" />

                    <TextView
                        android:id="@+id/githubUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_margin="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="15sp"
                        android:text="@string/company_name" />

                    <TextView
                        android:id="@+id/company_name_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_margin="10dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="15sp"
                        android:text="@string/jb_details" />

                    <TextView
                        android:id="@+id/blog_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_margin="10dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="@string/note"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/card_details" />

        <EditText
            android:id="@+id/noteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_note_here"
            android:layout_margin="10dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/noteTitle"
            />

        <Button
            android:id="@+id/saveNote"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>